<resources>
    <string name="app_name">Game News</string>
    <string name="game_title_hint">Enter a title for the game.</string>
    <string name="game_title_label">Title</string>
    <string name="game_details_label">Details</string>
    <string name="game_solved_label">Solved</string>
    <string name="game_photo_button_description">Take photo of game cover</string>
    <string name="game_photo_no_image_description">
        Game cover photo (not set)
    </string>
    <string name="game_photo_image_description">Game cover photo (set)</string>
    <string name="new_game">New Game</string>
    <string name="game_suspect_text">Choose Suspect</string>
    <string name="game_report_text">Send Crime Report</string>
    <string name="game_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="game_report_solved">The case is solved</string>
    <string name="game_report_unsolved">The case is not solved</string>
    <string name="game_report_no_suspect">there is no suspect.</string>
    <string name="game_report_suspect">the suspect is %s.</string>
    <string name="game_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
